edit alt & resize

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 body {
     font-family: 'Sarabun', sans-serif;
     line-height: 1.7;
-    background: url("../../image/pic2.jpg");
+    background: url("../../image/pic2.webp");
 	background-size: cover;
 	background-position: top center;
 	background-attachment: fixed;
