--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,8 +44,10 @@ a {
 }
 
 .card-img {
-    min-height: 500px;
-    max-height: 500px;
+    display: flex;
+    align-items: center;
+    min-height: 250px;
+    max-height: 250px;
     border-radius: 10px;
     overflow: hidden;
     margin-bottom: 8px;
